# ifyouarereadingthis

./: .gitignore.txt
20260701/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
20260701/comm/: commutils.cpp  commutils.h  modbusclient.cpp  modbusclient.h  modbusrtuclient.cpp  modbusrtuclient.h  modbusserver.cpp  modbusserver.h  serialcomm.cpp  serialcomm.h  tcpclient.cpp  tcpclient.h  tcpserver.cpp  tcpserver.h  udpcomm.cpp  udpcomm.h
